k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wr-assets-service
  labels:
    app: wr-assets
spec:
  selector:
    app: wr-assets
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
