k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wr-assets-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - assets.writtenrealms.com
    secretName: writtenrealms.com
  rules:
  - host: assets.writtenrealms.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wr-assets-service
            port:
              number: 80
